corrijo estilos y responsive

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -22,80 +22,82 @@
     />
     <link rel="stylesheet" href="../css/estilos.css" />
     <link
-    rel="apple-touch-icon"
-    sizes="57x57"
-    href="../favicon/apple-icon-57x57.png"
-  />
-  <link
-    rel="apple-touch-icon"
-    sizes="60x60"
-    href="../favicon/apple-icon-60x60.png"
-  />
-  <link
-    rel="apple-touch-icon"
-    sizes="72x72"
-    href="../favicon/apple-icon-72x72.png"
-  />
-  <link
-    rel="apple-touch-icon"
-    sizes="76x76"
-    href="../favicon/apple-icon-76x76.png"
-  />
-  <link
-    rel="apple-touch-icon"
-    sizes="114x114"
-    href="../favicon/apple-icon-114x114.png"
-  />
-  <link
-    rel="apple-touch-icon"
-    sizes="120x120"
-    href="../favicon/apple-icon-120x120.png"
-  />
-  <link
-    rel="apple-touch-icon"
-    sizes="144x144"
-    href="../favicon/apple-icon-144x144.png"
-  />
-  <link
-    rel="apple-touch-icon"
-    sizes="152x152"
-    href="../favicon/apple-icon-152x152.png"
-  />
-  <link
-    rel="apple-touch-icon"
-    sizes="180x180"
-    href="../favicon/apple-icon-180x180.png"
-  />
-  <link
-    rel="icon"
-    type="image/png"
-    sizes="192x192"
-    href="../favicon/android-icon-192x192.png"
-  />
-  <link
-    rel="icon"
-    type="image/png"
-    sizes="32x32"
-    href="../favicon/favicon-32x32.png"
-  />
-  <link
-    rel="icon"
-    type="image/png"
-    sizes="96x96"
-    href="../favicon/favicon-96x96.png"
-  />
-  <link
-    rel="icon"
-    type="image/png"
-    sizes="16x16"
-    href="../favicon/favicon-16x16.png"
-  />
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="../favicon/apple-icon-57x57.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="../favicon/apple-icon-60x60.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="../favicon/apple-icon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="../favicon/apple-icon-76x76.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="../favicon/apple-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="../favicon/apple-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="../favicon/apple-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="../favicon/apple-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="../favicon/apple-icon-180x180.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="../favicon/android-icon-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="../favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="../favicon/favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="../favicon/favicon-16x16.png"
+    />
   </head>
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-light menu">
         <div class="container-fluid">
-          <img src="../multimedia/iconos/LOGO.jpg" alt="logo" />
+          <a class="active" aria-current="page" href="../index.html">
+            <img src="../multimedia/iconos/LOGO.jpg" alt="logo"
+          /></a>
           <button
             class="navbar-toggler"
             type="button"
@@ -109,11 +111,6 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="opcionesMenu">
-              <li class="nav-item">
-                <a class="active" aria-current="page" href="../index.html"
-                  >Inicio</a
-                >
-              </li>
               <li class="nav-item">
                 <a href="./guias.html">Guias de cultivo</a>
               </li>
@@ -174,20 +171,23 @@
       </article>
     </section>
     <footer>
-      <img class="logo" src="../multimedia/iconos/LOGO.jpg" alt="LOGO" />
+      <img src="../multimedia/iconos/LOGO.jpg" alt="LOGO" />
       <div>
         <p>Sitio desarrollado por Carolina Gómez</p>
-        <a href="./contacto.html">Ir arriba</a>
+        <i class="far fa-arrow-alt-circle-up"></i>
+
+
+        <a href="./guias.html">Ir arriba</a>
       </div>
       <div class="footer__redes">
+        <h3>Seguinos en</h3>
         <ul>
-          <h3>Seguinos en</h3>
           <li>
             <a href="https://www.instagram.com/">
               <img
                 src="../multimedia/iconos/iconfinder-social-media-applications-3instagram-4102579_113804.svg"
                 alt="icono instagram"
-              />Instagram
+              />
             </a>
           </li>
           <li>
@@ -196,7 +196,7 @@
                 src="../multimedia/iconos/facebook_icon-icons.com_53612.svg"
                 alt="icono facebook"
               />
-              Facebook</a
+              </a
             >
           </li>
           <li>
@@ -206,7 +206,7 @@
                 alt="icono twiter"
               />
 
-              Twitter</a
+              </a
             >
           </li>
         </ul>
