--- a/html/guias.html
+++ b/html/guias.html
@@ -92,7 +92,10 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light menu">
         <div class="container-fluid">
-          <img src="../multimedia/iconos/LOGO.jpg" alt="logo" />
+          <a class="active" aria-current="page" href="../index.html"
+                  >
+          <img src="../multimedia/iconos/LOGO.jpg" alt="logo" /></a
+          >
           <button
             class="navbar-toggler"
             type="button"
@@ -106,11 +109,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="opcionesMenu">
-              <li class="nav-item">
-                <a class="active" aria-current="page" href="../index.html"
-                  >Inicio</a
-                >
-              </li>
+              
               <li class="nav-item">
                 <a href="./guias.html">Guias de cultivo</a>
               </li>
@@ -208,45 +207,48 @@
         </div>
       </section>
       </div>
-    <footer>
-      <img class="logo" src="../multimedia/iconos/LOGO.jpg" alt="LOGO" />
-      <div>
-        <p>Sitio desarrollado por Carolina Gómez</p>
-        <a href="./guias.html">Ir arriba</a>
-      </div>
-      <div class="footer__redes">
-        <ul>
+      <footer>
+        <img src="../multimedia/iconos/LOGO.jpg" alt="LOGO" />
+        <div>
+          <p>Sitio desarrollado por Carolina Gómez</p>
+          <i class="far fa-arrow-alt-circle-up"></i>
+  
+  
+          <a href="./guias.html">Ir arriba</a>
+        </div>
+        <div class="footer__redes">
           <h3>Seguinos en</h3>
-          <li>
-            <a href="https://www.instagram.com/">
-              <img
-                src="../multimedia/iconos/iconfinder-social-media-applications-3instagram-4102579_113804.svg"
-                alt="icono instagram"
-              />Instagram
-            </a>
-          </li>
-          <li>
-            <a href="https://www.facebook.com/">
-              <img
-                src="../multimedia/iconos/facebook_icon-icons.com_53612.svg"
-                alt="icono facebook"
-              />
-              Facebook</a
-            >
-          </li>
-          <li>
-            <a href="https://twitter.com/?lang=es">
-              <img
-                src="../multimedia/iconos/iconfinder-social-media-applications-6twitter-4102580_113802.svg"
-                alt="icono twiter"
-              />
-
-              Twitter</a
-            >
-          </li>
-        </ul>
-      </div>
-    </footer>
+          <ul>
+            <li>
+              <a href="https://www.instagram.com/">
+                <img
+                  src="../multimedia/iconos/iconfinder-social-media-applications-3instagram-4102579_113804.svg"
+                  alt="icono instagram"
+                />
+              </a>
+            </li>
+            <li>
+              <a href="https://www.facebook.com/">
+                <img
+                  src="../multimedia/iconos/facebook_icon-icons.com_53612.svg"
+                  alt="icono facebook"
+                />
+                </a
+              >
+            </li>
+            <li>
+              <a href="https://twitter.com/?lang=es">
+                <img
+                  src="../multimedia/iconos/iconfinder-social-media-applications-6twitter-4102580_113802.svg"
+                  alt="icono twiter"
+                />
+  
+                </a
+              >
+            </li>
+          </ul>
+        </div>
+      </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
