--- a/html/tienda.html
+++ b/html/tienda.html
@@ -92,8 +92,10 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light menu">
         <div class="container-fluid">
-          <img src="../multimedia/iconos/LOGO.jpg" alt="logo" />
-          <button
+          <a class="active" aria-current="page" href="../index.html"
+          >
+  <img src="../multimedia/iconos/LOGO.jpg" alt="logo" /></a
+  >          <button
             class="navbar-toggler"
             type="button"
             data-bs-toggle="collapse"
@@ -106,11 +108,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="opcionesMenu">
-              <li class="nav-item">
-                <a class="active" aria-current="page" href="../index.html"
-                  >Inicio</a
-                >
-              </li>
+            
               <li class="nav-item">
                 <a href="./guias.html">Guias de cultivo</a>
               </li>
@@ -167,20 +165,23 @@
       </article>
     </section>
     <footer>
-      <img class="logo" src="../multimedia/iconos/LOGO.jpg" alt="LOGO" />
+      <img src="../multimedia/iconos/LOGO.jpg" alt="LOGO" />
       <div>
         <p>Sitio desarrollado por Carolina Gómez</p>
-        <a href="./tienda.html">Ir arriba</a>
+        <i class="far fa-arrow-alt-circle-up"></i>
+
+
+        <a href="./guias.html">Ir arriba</a>
       </div>
       <div class="footer__redes">
+        <h3>Seguinos en</h3>
         <ul>
-          <h3>Seguinos en</h3>
           <li>
             <a href="https://www.instagram.com/">
               <img
                 src="../multimedia/iconos/iconfinder-social-media-applications-3instagram-4102579_113804.svg"
                 alt="icono instagram"
-              />Instagram
+              />
             </a>
           </li>
           <li>
@@ -189,7 +190,7 @@
                 src="../multimedia/iconos/facebook_icon-icons.com_53612.svg"
                 alt="icono facebook"
               />
-              Facebook</a
+              </a
             >
           </li>
           <li>
@@ -199,7 +200,7 @@
                 alt="icono twiter"
               />
 
-              Twitter</a
+              </a
             >
           </li>
         </ul>
