ajusto detalles para mobile

--- a/index.html
+++ b/index.html
@@ -267,9 +267,7 @@
         </div>
       </section>
       <section class="noticias box__style">
-        <h2 class="animate__animated animate__zoomInUp titulo__h1">
-          Lo más buscado
-        </h2>
+        <h2 class="animate__animated animate__zoomInUp titulo__h1">Lo más buscado</h2>
         <div class="accordion" id="accordionPanelsStayOpenExample">
           <div class="accordion-item">
             <h2 class="accordion-header" id="panelsStayOpen-headingOne">
@@ -280,9 +278,7 @@
                 data-bs-target="#panelsStayOpen-collapseOne"
                 aria-expanded="true"
                 aria-controls="panelsStayOpen-collapseOne"
-              >
-                Registro REPROCANN
-              </button>
+              >Registro REPROCANN  </button>
             </h2>
             <div
               id="panelsStayOpen-collapseOne"
