--- a/html/contacto.html
+++ b/html/contacto.html
@@ -129,11 +129,8 @@
       </nav>
     </header>
     <section class="contacto">
-      <h1
-        class="contacto__titulo animate__animated animate__zoomInDown titulo__h1"
-      >
-        Comunicate con nosotres!
-      </h1>
+      <h1 class="contacto__titulo animate__animated animate__zoomInDown titulo__h1"
+      >Comunicate con nosotres!/h1>
       <article>
         <img
           src="../multimedia/imagenes/imagen2.jpg"
