sigo ajustando diseño para mobile

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -130,7 +130,7 @@
     </header>
     <section class="contacto">
       <h1 class="contacto__titulo animate__animated animate__zoomInDown titulo__h1"
-      >Comunicate con nosotres!/h1>
+      >Comunicate con nosotres!</h1>
       <article>
         <img
           src="../multimedia/imagenes/imagen2.jpg"
@@ -174,7 +174,7 @@
         <i class="far fa-arrow-alt-circle-up"></i>
 
 
-        <a href="./guias.html">Ir arriba</a>
+        <a href="./contacto.html">Ir arriba</a>
       </div>
       <div class="footer__redes">
         <h3>Seguinos en</h3>
