--- a/html/tienda.html
+++ b/html/tienda.html
@@ -171,7 +171,7 @@
         <i class="far fa-arrow-alt-circle-up"></i>
 
 
-        <a href="./guias.html">Ir arriba</a>
+        <a href="./tienda.html">Ir arriba</a>
       </div>
       <div class="footer__redes">
         <h3>Seguinos en</h3>
