--- a/html/cannabisMedicinal.html
+++ b/html/cannabisMedicinal.html
@@ -207,9 +207,7 @@
       <div>
         <p>Sitio desarrollado por Carolina Gómez</p>
         <i class="far fa-arrow-alt-circle-up"></i>
-
-
-        <a href="./guias.html">Ir arriba</a>
+        <a href="./cannabisMedicinal.html">Ir arriba</a>
       </div>
       <div class="footer__redes">
         <h3>Seguinos en</h3>
