--- a/index.html
+++ b/index.html
@@ -134,65 +134,49 @@
         </div>
       </nav>
     </header>
-    <section>
-      <div class="container-fluid carrousel">
-        <div class="row">
-          <div
-            id="carouselExampleControls"
-            class="carousel slide"
-            data-bs-ride="carousel"
-          >
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img
+    <section class="container-fluid carrousel">
+      <div class="row">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img
                   src="./multimedia/imagenes/carrousel.PNG"
                   class="d-block"
                   alt="Detalle del nro de resolucion"
                 />
-              </div>
-              <div class="carousel-item">
-                <img
-                  src="./multimedia/imagenes/carru2.PNG"
-                  class="d-block"
-                  alt="Pasos a seguir para certificado "
-                />
-              </div>
-              <div class="carousel-item">
-                <img
-                  src="./multimedia/imagenes/carru3.PNG"
-                  class="d-block"
-                  alt="Detalle de ley"
-                />
-              </div>
             </div>
-            <button
-              class="carousel-control-prev"
-              type="button"
-              data-bs-target="#carouselExampleControls"
-              data-bs-slide="prev"
-            >
-              <span
-                class="carousel-control-prev-icon"
-                aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button
-              class="carousel-control-next"
-              type="button"
-              data-bs-target="#carouselExampleControls"
-              data-bs-slide="next"
-            >
-              <span
-                class="carousel-control-next-icon"
-                aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Next</span>
-            </button>
+            <div class="carousel-item">
+              <img
+              src="./multimedia/imagenes/carru2.PNG"
+              class="d-block"
+              alt="Pasos a seguir para certificado "
+            />
+            </div>
+            <div class="carousel-item">
+              <img
+              src="./multimedia/imagenes/carru3.PNG"
+              class="d-block"
+              alt="Detalle de ley"
+            />
+            </div>
           </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
       </div>
     </section>
+  
     <section class="seccionCentral">
       <section class="primerSeccion">
         <div class="card mb-3 primerSeccion__elegida">
