ajusto diseño para breackpoint tablet

--- a/html/cannabisMedicinal.html
+++ b/html/cannabisMedicinal.html
@@ -27,83 +27,82 @@
 
     <link rel="stylesheet" href="../css/estilos.css" />
     <link
-    rel="apple-touch-icon"
-    sizes="57x57"
-    href="../favicon/apple-icon-57x57.png"
-  />
-  <link
-    rel="apple-touch-icon"
-    sizes="60x60"
-    href="../favicon/apple-icon-60x60.png"
-  />
-  <link
-    rel="apple-touch-icon"
-    sizes="72x72"
-    href="../favicon/apple-icon-72x72.png"
-  />
-  <link
-    rel="apple-touch-icon"
-    sizes="76x76"
-    href="../favicon/apple-icon-76x76.png"
-  />
-  <link
-    rel="apple-touch-icon"
-    sizes="114x114"
-    href="../favicon/apple-icon-114x114.png"
-  />
-  <link
-    rel="apple-touch-icon"
-    sizes="120x120"
-    href="../favicon/apple-icon-120x120.png"
-  />
-  <link
-    rel="apple-touch-icon"
-    sizes="144x144"
-    href="../favicon/apple-icon-144x144.png"
-  />
-  <link
-    rel="apple-touch-icon"
-    sizes="152x152"
-    href="../favicon/apple-icon-152x152.png"
-  />
-  <link
-    rel="apple-touch-icon"
-    sizes="180x180"
-    href="../favicon/apple-icon-180x180.png"
-  />
-  <link
-    rel="icon"
-    type="image/png"
-    sizes="192x192"
-    href="../favicon/android-icon-192x192.png"
-  />
-  <link
-    rel="icon"
-    type="image/png"
-    sizes="32x32"
-    href="../favicon/favicon-32x32.png"
-  />
-  <link
-    rel="icon"
-    type="image/png"
-    sizes="96x96"
-    href="../favicon/favicon-96x96.png"
-  />
-  <link
-    rel="icon"
-    type="image/png"
-    sizes="16x16"
-    href="../favicon/favicon-16x16.png"
-  />
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="../favicon/apple-icon-57x57.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="../favicon/apple-icon-60x60.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="../favicon/apple-icon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="../favicon/apple-icon-76x76.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="../favicon/apple-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="../favicon/apple-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="../favicon/apple-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="../favicon/apple-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="../favicon/apple-icon-180x180.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="../favicon/android-icon-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="../favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="../favicon/favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="../favicon/favicon-16x16.png"
+    />
   </head>
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-light menu">
         <div class="container-fluid">
-          <a class="active" aria-current="page" href="../index.html"
-          >
-  <img src="../multimedia/iconos/LOGO.jpg" alt="logo" /></a
-  >
+          <a class="active" aria-current="page" href="../index.html">
+            <img src="../multimedia/iconos/LOGO.jpg" alt="logo"
+          /></a>
           <button
             class="navbar-toggler"
             type="button"
@@ -117,7 +116,6 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="opcionesMenu">
-            
               <li class="nav-item">
                 <a href="./guias.html">Guias de cultivo</a>
               </li>
@@ -137,21 +135,26 @@
     </header>
     <div class="card-group seccionUno">
       <div class="card seccionUno__opciones" data-aos="flip-left">
-        <h5>Marihuana y CBD</h5>
+        <a href="#"><h5>Marihuana y CBD</h5></a>
+
         <img
           src="../multimedia/imagenes/marihuana-medicinal.jpg"
           alt="marihuana-medicinal"
         />
       </div>
       <div class="card seccionUno__opciones" data-aos="flip-left">
-        <h5>Últimas Noticias</h5>
+        <a href="#">
+          <h5>Últimas Noticias</h5>
+        </a>
         <img
           src="../multimedia/imagenes/Argentina. la marcha mundial de la marihuana se hizo por redes.jpg"
           alt="imagen representando legalidad del cannabis en argentina"
         />
       </div>
       <div class="card seccionUno__opciones tres" data-aos="flip-left">
-        <h5>Tratamientos y recetas</h5>
+        <a href="#">
+          <h5>Tratamientos y recetas</h5>
+        </a>
         <img
           src="../multimedia/imagenes/tratamientos.PNG"
           alt="imagen de extracion de planta de cannabis"
@@ -191,22 +194,22 @@
       </article>
       <section class="investigaciones__documental box__style--dark">
         <h2 class="titulo__h2">Mini documental</h2>
-        <iframe 
-        src="https://www.youtube.com/embed/K_uSRryQt0M"
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen
-      ></iframe>
-
+        <iframe
+          src="https://www.youtube.com/embed/K_uSRryQt0M"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
       </section>
-     
     </section>
     <footer>
-      <img src="../multimedia/iconos/LOGO.jpg" alt="LOGO" />
-      <div>
+      <a class="active" aria-current="page" href="../index.html">
+        <img src="../multimedia/iconos/LOGO.jpg" alt="logo"
+      /></a>      <div>
         <p>Sitio desarrollado por Carolina Gómez</p>
         <i class="far fa-arrow-alt-circle-up"></i>
+
         <a href="./cannabisMedicinal.html">Ir arriba</a>
       </div>
       <div class="footer__redes">
@@ -226,8 +229,7 @@
                 src="../multimedia/iconos/facebook_icon-icons.com_53612.svg"
                 alt="icono facebook"
               />
-              </a
-            >
+            </a>
           </li>
           <li>
             <a href="https://twitter.com/?lang=es">
@@ -235,9 +237,7 @@
                 src="../multimedia/iconos/iconfinder-social-media-applications-6twitter-4102580_113802.svg"
                 alt="icono twiter"
               />
-
-              </a
-            >
+            </a>
           </li>
         </ul>
       </div>
