--- a/html/contacto.html
+++ b/html/contacto.html
@@ -168,8 +168,9 @@
       </article>
     </section>
     <footer>
-      <img src="../multimedia/iconos/LOGO.jpg" alt="LOGO" />
-      <div>
+      <a class="active" aria-current="page" href="../index.html">
+        <img src="../multimedia/iconos/LOGO.jpg" alt="logo"
+      /></a>      <div>
         <p>Sitio desarrollado por Carolina Gómez</p>
         <i class="far fa-arrow-alt-circle-up"></i>
 
