--- a/index.html
+++ b/index.html
@@ -176,16 +176,12 @@
         </div>
       </div>
     </section>
-  
-    <section class="seccionCentral">
+      <section class="seccionCentral">
       <section class="primerSeccion">
         <div class="card mb-3 primerSeccion__elegida">
           <div class="row g-0">
-            <h5
-              class="card-title animate__animated animate__heartBeat titulo__h1"
-            >
-              Variedad del mes
-            </h5>
+            <h5 class="card-title animate__animated animate__heartBeat titulo__h1"
+            >Variedad del mes</h5>
             <div class="col-md-4">
               <img
                 src="./multimedia/imagenes/jamaican.PNG"
@@ -232,21 +228,21 @@
               src="./multimedia/imagenes/SMG-logo-dark.png"
               alt="logo de SanMari"
             />
-            <a href="https://linktr.ee/sanmarigrow" class="visitar">Visitar</a>
+            <a href="https://www.instagram.com/sanmarigrow/?hl=es-la" class="visitar">Visitar</a>
           </div>
           <div class="card podio" data-aos="flip-up">
             <img
               src="./multimedia/imagenes/logocultivarg.png"
               alt="logo de cultivarg"
             />
-            <a href="https://linktr.ee/sanmarigrow" class="visitar">Visitar</a>
+            <a href="https://www.instagram.com/cultivarg/?hl=es-la" class="visitar">Visitar</a>
           </div>
           <div class="card podio" data-aos="flip-right">
             <img
-              src="./multimedia/imagenes/descarga.png"
-              alt="logo de Cultibaires..."
+              src="./multimedia/imagenes/52366916_2275437389392278_3147366203605909504_n.jpg"
+              alt="logo de lugannabis"
             />
-            <a href="https://linktr.ee/sanmarigrow" class="visitar">Visitar</a>
+            <a href="https://www.instagram.com/lugannabis/" class="visitar">Visitar</a>
           </div>
         </div>
       </section>
@@ -367,7 +363,9 @@
       </div>
     </section>
     <footer>
-      <img src="./multimedia/iconos/LOGO.jpg" alt="LOGO" />
+      <a class="active" aria-current="page" href="./index.html">
+        <img src="./multimedia/iconos/LOGO.jpg" alt="logo"
+      /></a>
       <div>
         <p>Sitio desarrollado por Carolina Gómez</p>
         <i class="far fa-arrow-alt-circle-up"></i>
