--- a/html/guias.html
+++ b/html/guias.html
@@ -131,7 +131,7 @@
       <article class="instructivo">
         <div class="instructivo__manual">
           <h1 class="animate__animated animate__fadeInLeft titulo__h2">Manual para el cultivador</h1>
-          <img src="../multimedia/imagenes/manual.jfif" alt="manual" />
+          <img src="../multimedia/imagenes/manual.png" alt="manual" />
         </div>
         <nav>
           <ul class="instructivo__opciones">
@@ -208,12 +208,12 @@
       </section>
       </div>
       <footer>
-        <img src="../multimedia/iconos/LOGO.jpg" alt="LOGO" />
-        <div>
+        <a class="active" aria-current="page" href="../index.html">
+          <img src="../multimedia/iconos/LOGO.jpg" alt="logo"
+        /></a>        <div>
           <p>Sitio desarrollado por Carolina Gómez</p>
           <i class="far fa-arrow-alt-circle-up"></i>
-  
-  
+   
           <a href="./guias.html">Ir arriba</a>
         </div>
         <div class="footer__redes">
