ajusto detalles de diseño

--- a/html/cannabisMedicinal.html
+++ b/html/cannabisMedicinal.html
@@ -100,156 +100,92 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light menu">
         <div class="container-fluid">
-          <a class="active" aria-current="page" href="../index.html">
-            <img src="../multimedia/iconos/LOGO.jpg" alt="logo"
+          <a class="active" aria-current="page" href="../index.html"><img src="../multimedia/iconos/LOGO.jpg" alt="logo"
           /></a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="opcionesMenu">
-              <li class="nav-item">
-                <a href="./guias.html">Guias de cultivo</a>
+              <li class="nav-item"><a href="./guias.html">Guias de cultivo</a>
               </li>
-              <li class="nav-item">
-                <a href="./cannabisMedicinal.html">Cannabis Medicinal</a>
+              <li class="nav-item"><a href="./cannabisMedicinal.html">Cannabis Medicinal</a>
               </li>
-              <li class="nav-item">
-                <a href="./tienda.html">Tienda</a>
+              <li class="nav-item"><a href="./tienda.html">Tienda</a>
               </li>
-              <li class="nav-item">
-                <a href="./contacto.html">Contacto</a>
+              <li class="nav-item"><a href="./contacto.html">Contacto</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
     </header>
-    <div class="card-group seccionUno">
-      <div class="card seccionUno__opciones" data-aos="flip-left">
+    <div class="card-group opciones">
+      <div class="card" data-aos="flip-left">
         <a href="#"><h5>Marihuana y CBD</h5></a>
-
         <img
           src="../multimedia/imagenes/marihuana-medicinal.jpg"
           alt="marihuana-medicinal"
         />
       </div>
-      <div class="card seccionUno__opciones" data-aos="flip-left">
-        <a href="#">
-          <h5>Últimas Noticias</h5>
-        </a>
-        <img
-          src="../multimedia/imagenes/Argentina. la marcha mundial de la marihuana se hizo por redes.jpg"
-          alt="imagen representando legalidad del cannabis en argentina"
-        />
+      <div class="card " data-aos="flip-left">
+        <a href="#"><h5>Últimas Noticias</h5></a>
+        <img src="../multimedia/imagenes/Argentina. la marcha mundial de la marihuana se hizo por redes.jpg" alt="imagen representando legalidad del cannabis en argentina"/>
       </div>
-      <div class="card seccionUno__opciones tres" data-aos="flip-left">
-        <a href="#">
-          <h5>Tratamientos y recetas</h5>
-        </a>
-        <img
-          src="../multimedia/imagenes/tratamientos.PNG"
-          alt="imagen de extracion de planta de cannabis"
-        />
+      <div class="card" data-aos="flip-left">
+        <a href="#"><h5>Tratamientos y recetas</h5></a>
+        <img src="../multimedia/imagenes/tratamientos.PNG" alt="imagen de extracion de planta de cannabis"/>
       </div>
     </div>
     <section class="investigaciones">
       <h3 class="titulo__h2">¿Cuánto sabes sobre cannabis medicinal?</h3>
-      <article class="investigaciones__aceite">
-        <img
-          src="../multimedia/imagenes/noticia03.jpg"
-          alt="aceite de cannabis"
-          data-aos="zoom-out-up"
-        />
-        <p>
-          La planta de cannabis se utilizó por miles de años en distintas
-          culturas alrededor del mundo para distintos fines, entre ellos, la
-          medicina. La planta posee distintos principios activos, denominados
-          Cannabinoides. Estos Cannabinoides, en un número de más de 60, tienen
-          distintas funciones, algunas descubiertas, y en su mayoría sin tener
-          en claro aún cual es propósito. Estos Cannabinoides, por estar dentro
-          de la planta se denominan Fitocannabinoides. El cuerpo humano posee,
-          en la superficie de muchos tipos de células de nuestro organismo,
-          sitios específicos donde se acoplan estos principios activos de la
-          planta, los fitocannabinoides. Los más comunes, y de cuales se tiene
-          mayor información son el THC, el CBD, CBG, CBN entre más de 100
-          descubiertos hasta el día de hoy. Los receptores de estos
-          cannabinoides son denominados CB1 y CB2, encontrándose distribuidos
-          por todo el cuerpo.El cuerpo humano también produce moléculas
-          similares a las de la planta de cannabis, llamados endocannabinoides
-          (endo=adentro). Los cannabinoides tienen propiedades medicinales, y
-          esto permite que algunas dolencias y patologías puedan ser tratadas
-          con cannabis, tales como cáncer, epilepsia, glaucoma, esclerosis
-          múltiple, fibromialgia, dolor crónico, entre otros que están en
-          investigación.
-        </p>
+      <article>
+        <img src="../multimedia/imagenes/noticia03.jpg" alt="aceite de cannabis" data-aos="zoom-out-up"/>
+        <p>La planta de cannabis se utilizó por miles de años en distintas culturas alrededor del mundo para distintos fines, entre ellos, la
+          medicina. La planta posee distintos principios activos, denominados Cannabinoides. Estos Cannabinoides, en un número de más de 60, tienen
+          distintas funciones, algunas descubiertas, y en su mayoría sin tener en claro aún cual es propósito. Estos Cannabinoides, por estar dentro
+          de la planta se denominan Fitocannabinoides. El cuerpo humano posee, en la superficie de muchos tipos de células de nuestro organismo,
+          sitios específicos donde se acoplan estos principios activos de la planta, los fitocannabinoides. Los más comunes, y de cuales se tiene
+          mayor información son el THC, el CBD, CBG, CBN entre más de 100 descubiertos hasta el día de hoy. Los receptores de estos
+          cannabinoides son denominados CB1 y CB2, encontrándose distribuidos por todo el cuerpo.El cuerpo humano también produce moléculas
+          similares a las de la planta de cannabis, llamados endocannabinoides (endo=adentro). Los cannabinoides tienen propiedades medicinales, y
+          esto permite que algunas dolencias y patologías puedan ser tratadas con cannabis, tales como cáncer, epilepsia, glaucoma, esclerosis
+          múltiple, fibromialgia, dolor crónico, entre otros que están en investigación.</p>
       </article>
-      <section class="investigaciones__documental box__style--dark">
+      <section class="investigaciones__documental">
         <h2 class="titulo__h2">Mini documental</h2>
-        <iframe
-          src="https://www.youtube.com/embed/K_uSRryQt0M"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
+        <iframe src="https://www.youtube.com/embed/K_uSRryQt0M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </section>
     </section>
     <footer>
-      <a class="active" aria-current="page" href="../index.html">
-        <img src="../multimedia/iconos/LOGO.jpg" alt="logo"
-      /></a>      <div>
+      <a class="active" aria-current="page" href="../index.html"><img src="../multimedia/iconos/LOGO.jpg" alt="logo"/></a>
+      <div>
         <p>Sitio desarrollado por Carolina Gómez</p>
         <i class="far fa-arrow-alt-circle-up"></i>
-
         <a href="./cannabisMedicinal.html">Ir arriba</a>
       </div>
       <div class="footer__redes">
         <h3>Seguinos en</h3>
         <ul>
           <li>
-            <a href="https://www.instagram.com/">
-              <img
-                src="../multimedia/iconos/iconfinder-social-media-applications-3instagram-4102579_113804.svg"
-                alt="icono instagram"
-              />
+            <a href="https://www.instagram.com/"><img src="../multimedia/iconos/iconfinder-social-media-applications-3instagram-4102579_113804.svg" alt="icono instagram"/>
             </a>
           </li>
           <li>
-            <a href="https://www.facebook.com/">
-              <img
-                src="../multimedia/iconos/facebook_icon-icons.com_53612.svg"
-                alt="icono facebook"
-              />
+            <a href="https://www.facebook.com/"><img src="../multimedia/iconos/facebook_icon-icons.com_53612.svg" alt="icono facebook"/>
             </a>
           </li>
           <li>
-            <a href="https://twitter.com/?lang=es">
-              <img
-                src="../multimedia/iconos/iconfinder-social-media-applications-6twitter-4102580_113802.svg"
-                alt="icono twiter"
-              />
+            <a href="https://twitter.com/?lang=es"><img src="../multimedia/iconos/iconfinder-social-media-applications-6twitter-4102580_113802.svg" alt="icono twiter"/>
             </a>
           </li>
         </ul>
       </div>
     </footer>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-      AOS.init();
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script> AOS.init();</script>
   </body>
 </html>
