--- a/html/contacto.html
+++ b/html/contacto.html
@@ -1,127 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Conexión420 - Contacto</title>
-    <meta
-      name="description"
-      content="Dejanos tu mensaje que estamos para asesorarte"
-    />
-    <meta name="keywords" content="cannabis, marihuana, CBD, consultas" />
+    <title>Conexión420 - Guias de ayuda</title>
+    <meta name="description" content="Tenemos diversas guias de ayuda para iniciarte en el mundo como cultivador"/>
+    <meta name="keywords" content="cannabis, marihuana, indoor, exterior, plagas, cultivo, tratamientos"/>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"/>
     <link rel="stylesheet" href="../css/estilos.css" />
-    <link
-      rel="apple-touch-icon"
-      sizes="57x57"
-      href="../favicon/apple-icon-57x57.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="60x60"
-      href="../favicon/apple-icon-60x60.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="72x72"
-      href="../favicon/apple-icon-72x72.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="76x76"
-      href="../favicon/apple-icon-76x76.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="114x114"
-      href="../favicon/apple-icon-114x114.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="120x120"
-      href="../favicon/apple-icon-120x120.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="144x144"
-      href="../favicon/apple-icon-144x144.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="152x152"
-      href="../favicon/apple-icon-152x152.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="../favicon/apple-icon-180x180.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="192x192"
-      href="../favicon/android-icon-192x192.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="../favicon/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="96x96"
-      href="../favicon/favicon-96x96.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="../favicon/favicon-16x16.png"
-    />
+    <link rel="apple-touch-icon" sizes="57x57" href="../favicon/apple-icon-57x57.png"/>
+    <link rel="apple-touch-icon" sizes="60x60" href="../favicon/apple-icon-60x60.png"/>
+    <link rel="apple-touch-icon" sizes="72x72" href="../favicon/apple-icon-72x72.png"/>
+    <link rel="apple-touch-icon" sizes="76x76" href="../favicon/apple-icon-76x76.png"/>
+    <link rel="apple-touch-icon" sizes="114x114" href="../favicon/apple-icon-114x114.png"/>
+    <link rel="apple-touch-icon" sizes="120x120" href="../favicon/apple-icon-120x120.png"/>
+    <link rel="apple-touch-icon" sizes="144x144" href="../favicon/apple-icon-144x144.png"/>
+    <link rel="apple-touch-icon" sizes="152x152" href="../favicon/apple-icon-152x152.png"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-icon-180x180.png"/>
+    <link rel="icon" type="image/png" sizes="192x192" href="../favicon/android-icon-192x192.png"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png"/>
+    <link rel="icon" type="image/png" sizes="96x96" href="../favicon/favicon-96x96.png"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon/favicon-16x16.png"/>
   </head>
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-light menu">
         <div class="container-fluid">
-          <a class="active" aria-current="page" href="../index.html">
-            <img src="../multimedia/iconos/LOGO.jpg" alt="logo"
+          <a class="active" aria-current="page" href="../index.html"><img src="../multimedia/iconos/LOGO.jpg" alt="logo"
           /></a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="opcionesMenu">
-              <li class="nav-item">
-                <a href="./guias.html">Guias de cultivo</a>
+              <li class="nav-item"><a href="./guias.html">Guias de cultivo</a>
               </li>
-              <li class="nav-item">
-                <a href="./cannabisMedicinal.html">Cannabis Medicinal</a>
+              <li class="nav-item"><a href="./cannabisMedicinal.html">Cannabis Medicinal</a>
               </li>
-              <li class="nav-item">
-                <a href="./tienda.html">Tienda</a>
+              <li class="nav-item"><a href="./tienda.html">Tienda</a>
               </li>
-              <li class="nav-item">
-                <a href="./contacto.html">Contacto</a>
+              <li class="nav-item"><a href="./contacto.html">Contacto</a>
               </li>
             </ul>
           </div>
@@ -129,13 +51,9 @@
       </nav>
     </header>
     <section class="contacto">
-      <h1 class="contacto__titulo animate__animated animate__zoomInDown titulo__h1"
-      >Comunicate con nosotres!</h1>
+      <h1 class="animate__animated animate__zoomInDown titulo__h1">Comunicate con nosotres!</h1>
       <article>
-        <img
-          src="../multimedia/imagenes/imagen2.jpg"
-          alt="imagen de la planta de cannabis"
-        />
+        <img src="../multimedia/imagenes/imagen2.jpg" alt="imagen de la planta de cannabis"/>
         <form class="contacto__formulario" method="GET">
           <label for="nombre">Nombre</label>
           <input type="text" name="nombre" />
@@ -149,71 +67,47 @@
             <option value="Consumidor">Consumidor</option>
           </select>
           <label for="texto">Mensaje</label>
-          <textarea
-            name="texto"
-            cols="30"
-            rows="10"
-            placeholder="En qué podemos ayudarte?"
-          ></textarea>
+          <textarea name="texto" cols="30" rows="10" placeholder="En qué podemos ayudarte?"></textarea>
           <div class="newsletter">
             <label for="newsletter">Quiero recibir newsletter</label>
             <input type="checkbox" name="newsletter" value="1" />
           </div>
           <div class="contacto__formulario__botones">
-            <input class="btn--form" type="submit" value="Enviar" />
-            <input class="btn--form" type="reset" value="Limpiar" />
-            <input class="btn--form" type="button" value="Guardar" />
+            <input  type="submit" value="Enviar" />
+            <input  type="reset" value="Limpiar" />
+            <input  type="button" value="Guardar" />
           </div>
         </form>
       </article>
     </section>
     <footer>
-      <a class="active" aria-current="page" href="../index.html">
-        <img src="../multimedia/iconos/LOGO.jpg" alt="logo"
-      /></a>      <div>
+      <a class="active" aria-current="page" href="../index.html"><img src="../multimedia/iconos/LOGO.jpg" alt="logo"/></a>
+      <div>
         <p>Sitio desarrollado por Carolina Gómez</p>
         <i class="far fa-arrow-alt-circle-up"></i>
-
-
         <a href="./contacto.html">Ir arriba</a>
       </div>
       <div class="footer__redes">
         <h3>Seguinos en</h3>
         <ul>
           <li>
-            <a href="https://www.instagram.com/">
-              <img
-                src="../multimedia/iconos/iconfinder-social-media-applications-3instagram-4102579_113804.svg"
-                alt="icono instagram"
-              />
+            <a href="https://www.instagram.com/"><img src="../multimedia/iconos/iconfinder-social-media-applications-3instagram-4102579_113804.svg" alt="icono instagram"/>
             </a>
           </li>
           <li>
-            <a href="https://www.facebook.com/">
-              <img
-                src="../multimedia/iconos/facebook_icon-icons.com_53612.svg"
-                alt="icono facebook"
-              />
-              </a
-            >
+            <a href="https://www.facebook.com/"><img src="../multimedia/iconos/facebook_icon-icons.com_53612.svg" alt="icono facebook"/>
+            </a>
           </li>
           <li>
-            <a href="https://twitter.com/?lang=es">
-              <img
-                src="../multimedia/iconos/iconfinder-social-media-applications-6twitter-4102580_113802.svg"
-                alt="icono twiter"
-              />
-
-              </a
-            >
+            <a href="https://twitter.com/?lang=es"><img src="../multimedia/iconos/iconfinder-social-media-applications-6twitter-4102580_113802.svg" alt="icono twiter"/>
+            </a>
           </li>
         </ul>
       </div>
     </footer>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script> AOS.init();</script>
   </body>
 </html>
