--- a/html/tienda.html
+++ b/html/tienda.html
@@ -1,125 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Conexión420 - Productos</title>
-    <meta name="description" content="Tenemos la tienda más completa con diversidad de gropshops amigos">
-    <meta name="keywords" content="carpas, cultivo, luminaria, sustratos, fertilizantes">
+    <title>Conexión420 - Guias de ayuda</title>
+    <meta name="description" content="Tenemos diversas guias de ayuda para iniciarte en el mundo como cultivador"/>
+    <meta name="keywords" content="cannabis, marihuana, indoor, exterior, plagas, cultivo, tratamientos"/>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"/>
     <link rel="stylesheet" href="../css/estilos.css" />
-    <link
-    rel="apple-touch-icon"
-    sizes="57x57"
-    href="../favicon/apple-icon-57x57.png"
-  />
-  <link
-    rel="apple-touch-icon"
-    sizes="60x60"
-    href="../favicon/apple-icon-60x60.png"
-  />
-  <link
-    rel="apple-touch-icon"
-    sizes="72x72"
-    href="../favicon/apple-icon-72x72.png"
-  />
-  <link
-    rel="apple-touch-icon"
-    sizes="76x76"
-    href="../favicon/apple-icon-76x76.png"
-  />
-  <link
-    rel="apple-touch-icon"
-    sizes="114x114"
-    href="../favicon/apple-icon-114x114.png"
-  />
-  <link
-    rel="apple-touch-icon"
-    sizes="120x120"
-    href="../favicon/apple-icon-120x120.png"
-  />
-  <link
-    rel="apple-touch-icon"
-    sizes="144x144"
-    href="../favicon/apple-icon-144x144.png"
-  />
-  <link
-    rel="apple-touch-icon"
-    sizes="152x152"
-    href="../favicon/apple-icon-152x152.png"
-  />
-  <link
-    rel="apple-touch-icon"
-    sizes="180x180"
-    href="../favicon/apple-icon-180x180.png"
-  />
-  <link
-    rel="icon"
-    type="image/png"
-    sizes="192x192"
-    href="../favicon/android-icon-192x192.png"
-  />
-  <link
-    rel="icon"
-    type="image/png"
-    sizes="32x32"
-    href="../favicon/favicon-32x32.png"
-  />
-  <link
-    rel="icon"
-    type="image/png"
-    sizes="96x96"
-    href="../favicon/favicon-96x96.png"
-  />
-  <link
-    rel="icon"
-    type="image/png"
-    sizes="16x16"
-    href="../favicon/favicon-16x16.png"
-  />
+    <link rel="apple-touch-icon" sizes="57x57" href="../favicon/apple-icon-57x57.png"/>
+    <link rel="apple-touch-icon" sizes="60x60" href="../favicon/apple-icon-60x60.png"/>
+    <link rel="apple-touch-icon" sizes="72x72" href="../favicon/apple-icon-72x72.png"/>
+    <link rel="apple-touch-icon" sizes="76x76" href="../favicon/apple-icon-76x76.png"/>
+    <link rel="apple-touch-icon" sizes="114x114" href="../favicon/apple-icon-114x114.png"/>
+    <link rel="apple-touch-icon" sizes="120x120" href="../favicon/apple-icon-120x120.png"/>
+    <link rel="apple-touch-icon" sizes="144x144" href="../favicon/apple-icon-144x144.png"/>
+    <link rel="apple-touch-icon" sizes="152x152" href="../favicon/apple-icon-152x152.png"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-icon-180x180.png"/>
+    <link rel="icon" type="image/png" sizes="192x192" href="../favicon/android-icon-192x192.png"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png"/>
+    <link rel="icon" type="image/png" sizes="96x96" href="../favicon/favicon-96x96.png"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon/favicon-16x16.png"/>
   </head>
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-light menu">
         <div class="container-fluid">
-          <a class="active" aria-current="page" href="../index.html"
-          >
-  <img src="../multimedia/iconos/LOGO.jpg" alt="logo" /></a
-  >          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+          <a class="active" aria-current="page" href="../index.html"><img src="../multimedia/iconos/LOGO.jpg" alt="logo"
+          /></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="opcionesMenu">
-            
-              <li class="nav-item">
-                <a href="./guias.html">Guias de cultivo</a>
+              <li class="nav-item"><a href="./guias.html">Guias de cultivo</a>
               </li>
-              <li class="nav-item">
-                <a href="./cannabisMedicinal.html">Cannabis Medicinal</a>
+              <li class="nav-item"><a href="./cannabisMedicinal.html">Cannabis Medicinal</a>
               </li>
-              <li class="nav-item">
-                <a href="./tienda.html">Tienda</a>
+              <li class="nav-item"><a href="./tienda.html">Tienda</a>
               </li>
-              <li class="nav-item">
-                <a href="./contacto.html">Contacto</a>
+              <li class="nav-item"><a href="./contacto.html">Contacto</a>
               </li>
             </ul>
           </div>
@@ -129,88 +53,63 @@
     <section class="productos">
       <article>
         <h2 class="animate__animated animate__shakeX titulo__h3">Carpas de cultivo</h2>
-        <img
-          src="../multimedia/imagenes/D_NQ_NP_931997-MLA44180456984_112020-O.jpg"
-          alt="carpa80*80"
-        />
-        <button>Entrar</button>
+        <img src="../multimedia/imagenes/D_NQ_NP_931997-MLA44180456984_112020-O.jpg" alt="carpa80*80"/>
+        <a href="#"><button>Entrar</button></a>
       </article>
       <article>
         <h2 class="animate__animated animate__shakeX titulo__h3">Luminaria</h2>
-        <img src="../multimedia/imagenes/DSC_0118.jpg" alt="led" />
-        <button>Entrar</button>
+        <img src="../multimedia/imagenes/DSC_0118.jpg" alt="led"/>
+        <a href="#"><button>Entrar</button></a>
       </article>
       <article>
         <h2 class="animate__animated animate__shakeX titulo__h3">Sustratos</h2>
-        <img src="../multimedia/imagenes/descarga.jpg" alt="sustarto" />
-        <button>Entrar</button>
+        <img src="../multimedia/imagenes/descarga.jpg" alt="sustarto"/>
+        <a href="#"><button>Entrar</button></a>
       </article>
       <article>
         <h2 class="animate__animated animate__shakeX titulo__h3">Fertilizantes</h2>
-        <img
-          src="../multimedia/imagenes/fertilizantes.PNG"
-          alt="fertilizantes"
-        />
-        <button>Entrar</button>
+        <img src="../multimedia/imagenes/fertilizantes.PNG" alt="fertilizantes"/>
+        <a href="#"><button>Entrar</button></a>
       </article>
       <article>
         <h2 class="animate__animated animate__shakeX titulo__h3">Accesorios</h2>
-        <img src="../multimedia/imagenes/kit.PNG" alt="kit" />
-        <button>Entrar</button>
+        <img src="../multimedia/imagenes/kit.PNG" alt="kit"/>
+        <a href="#"><button>Entrar</button></a>
       </article>
       <article>
         <h2 class="animate__animated animate__shakeX titulo__h3">Cosecha y secado</h2>
         <img src="../multimedia/imagenes/secado.PNG" alt="secado" />
-        <button>Entrar</button>
+        <a href="#"><button>Entrar</button></a>
       </article>
     </section>
     <footer>
-      <a class="active" aria-current="page" href="../index.html">
-        <img src="../multimedia/iconos/LOGO.jpg" alt="logo"
-      /></a>      <div>
+      <a class="active" aria-current="page" href="../index.html"><img src="../multimedia/iconos/LOGO.jpg" alt="logo"/></a>
+      <div>
         <p>Sitio desarrollado por Carolina Gómez</p>
         <i class="far fa-arrow-alt-circle-up"></i>
-
-
         <a href="./tienda.html">Ir arriba</a>
       </div>
       <div class="footer__redes">
         <h3>Seguinos en</h3>
         <ul>
           <li>
-            <a href="https://www.instagram.com/">
-              <img
-                src="../multimedia/iconos/iconfinder-social-media-applications-3instagram-4102579_113804.svg"
-                alt="icono instagram"
-              />
+            <a href="https://www.instagram.com/"><img src="../multimedia/iconos/iconfinder-social-media-applications-3instagram-4102579_113804.svg" alt="icono instagram"/>
             </a>
           </li>
           <li>
-            <a href="https://www.facebook.com/">
-              <img
-                src="../multimedia/iconos/facebook_icon-icons.com_53612.svg"
-                alt="icono facebook"
-              />
-              </a
-            >
+            <a href="https://www.facebook.com/"><img src="../multimedia/iconos/facebook_icon-icons.com_53612.svg" alt="icono facebook"/>
+            </a>
           </li>
           <li>
-            <a href="https://twitter.com/?lang=es">
-              <img
-                src="../multimedia/iconos/iconfinder-social-media-applications-6twitter-4102580_113802.svg"
-                alt="icono twiter"
-              />
-
-              </a
-            >
+            <a href="https://twitter.com/?lang=es"><img src="../multimedia/iconos/iconfinder-social-media-applications-6twitter-4102580_113802.svg" alt="icono twiter"/>
+            </a>
           </li>
         </ul>
       </div>
     </footer>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script> AOS.init();</script>
   </body>
 </html>
